feat: make footer 1280px layout

--- a/src/blocks/common-block-styles.css
+++ b/src/blocks/common-block-styles.css
@@ -3,7 +3,7 @@
 @import url(./link/link.css);
 @import url(./link/_place/link_place_header-signin.css);
 @import url(./link/_place/link_place_header-signup.css);
+@import url(./link/_place/link_place_footer.css);
 
 
-/* @import url(.); */
 /* @import url(.); */
