--- a/src/blocks/logo/logo.css
+++ b/src/blocks/logo/logo.css
@@ -4,7 +4,7 @@
   height: 44px;
   background-repeat: no-repeat;
   background-size: contain;
-  transition: all .2s linear, filter .1s linear;
+  transition: all .2s ease-out, filter .2s ease-out;
 }
 
 .logo:hover {
