--- a/src/blocks/common-block-styles.css
+++ b/src/blocks/common-block-styles.css
@@ -6,4 +6,12 @@
 @import url(./link/_place/link_place_footer.css);
 
 
+@import url(./form/form.css);
+@import url(./form/__title/form__title.css);
+@import url(./form/__submit-button/form__submit-button.css);
+@import url(./form/__input/form__input.css);
+@import url(./form/__error-span/form__error-span.css);
+@import url(./form/__container/form__container.css);
+
+
 /* @import url(.); */
