--- a/src/blocks/form/__error-span/form__error-span.css
+++ b/src/blocks/form/__error-span/form__error-span.css
@@ -1,5 +1,6 @@
 .form__error-span {
   color: red;
-  margin-bottom: 15px;
-  font-size: 11px
+  height: 15px;
+  font-size: 11px;
+  margin-bottom: 5px;
 }
