--- a/src/blocks/form/__container/form__container.css
+++ b/src/blocks/form/__container/form__container.css
@@ -1,6 +1,7 @@
 .form__container {
   margin: auto;
-  max-width: 260px;
+  max-width: 360px;
   width: 100%;
-  max-height: 334px;
+  height: 437px;
+  /* height: 100%; */
 }
