--- a/src/index.css
+++ b/src/index.css
@@ -15,4 +15,10 @@
 
 @import url(./components/Footer/Footer.css);
 
+@import url(./components/Registration/Registration.css);
+
+@import url(./components/Login/Login.css);
+
+
+
 /* @import url(./); */
