--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,11 @@
 
 @import url(./fonts/fonts.css);
 
-
 @import url(./components/App/App.css);
 
 @import url(./components/Header/Header.css);
 
-
-
-
 @import url(./blocks/common-block-styles.css);
-
 
 @import url(./components/Footer/Footer.css);
 
@@ -19,6 +14,7 @@
 
 @import url(./components/Login/Login.css);
 
+@import url(./components/Main/Main.css);
 
 
 /* @import url(./); */
