feat: create main component 1280px layout

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -17,6 +17,7 @@
 @import url(./main/__quantity/main__quantity.css);
 @import url(./main/__label/main__label.css);
 @import url(./main/__pourin-spout-pic/main__pourin-spout-pic.css);
+@import url(./main/__send-result/main__send-result.css);
 
 
 /* @import url(.); */
