--- a/src/components/Footer/footer/footer.css
+++ b/src/components/Footer/footer/footer.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  position: fixed;
+  /* position: fixed; */
   bottom: 0;
   left: 0;
   right: 0;
@@ -13,4 +13,5 @@
 .footer::before {
   content: '';
   border-top: 1px solid #989898;
+  margin-top: 100px;
 }
