--- a/src/components/Main/main/__calculator/main__calculator.css
+++ b/src/components/Main/main/__calculator/main__calculator.css
@@ -2,6 +2,17 @@
   display: grid;
   grid-template-columns: repeat(6, 100px);
   grid-template-rows: repeat(5, 75px);
-  row-gap: 20px;
+  row-gap: 30px;
   column-gap: 40px;
 }
+
+/* @media screen and (max-width: 1119px){
+  .main__calculator {
+    display: grid;
+    grid-template-columns: repeat(6, 80px);
+    grid-template-rows: repeat(5, 50px);
+    row-gap: 30px;
+    column-gap: 40px;
+  }
+
+} */
