--- a/src/components/Main/main/__item-barcode/main__item-barcode.css
+++ b/src/components/Main/main/__item-barcode/main__item-barcode.css
@@ -1,3 +1,12 @@
 .main__item-barcode {
-  
+  max-height: 40px;
+  height: 100%;
+  background-color: #6F717B;
+  color: #000;
+  border-radius: 5px;
+  margin: 0;
+  padding-left: 10px;
+  align-items: center;
+  display: flex;
+  font-size: 15px;
 }
