--- a/src/components/Main/main/__pouring-spout/main__pouring-spout.css
+++ b/src/components/Main/main/__pouring-spout/main__pouring-spout.css
@@ -7,5 +7,8 @@
 }
 
 .main__pouring-spout:checked + .main__pourin-spout-pic  {
-  background-color: #1b4caa79;
+  background-color: #00000045;
+  filter: drop-shadow(0px 0px 5px rgba(21, 122, 255, 0.8));
+  transition: all .08s linear;
+
 }
