--- a/src/components/Main/main/__send-result/main__send-result.css
+++ b/src/components/Main/main/__send-result/main__send-result.css
@@ -1,3 +1,21 @@
 .main__send-result {
-  
+  max-height: 80px;
+  height: 100%;
+  background-color: #e46f02;
+  color: #000;
+  border-radius: 5px;
+  margin: 0;
+  border: none;
+  outline: none;
+  padding: 0;
+  transition: all .1s linear;
+  cursor: pointer;
+}
+
+.main__send-result:hover {
+  background-color: #fc8415;
+}
+
+.main__send-result:active {
+  background-color: #b65800;
 }
