feat: create main component 1280px layout

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -18,6 +18,7 @@
 @import url(./main/__label/main__label.css);
 @import url(./main/__pourin-spout-pic/main__pourin-spout-pic.css);
 @import url(./main/__send-result/main__send-result.css);
+@import url(./main/__nothing-scanded-msg/main__nothing-scanded-msg.css);
 
 
 /* @import url(.); */
