--- a/src/blocks/link/_place/link_place_header-signup.css
+++ b/src/blocks/link/_place/link_place_header-signup.css
@@ -8,5 +8,14 @@
   padding: 0 12px;
   border-radius: 5px;
   text-align: center; 
-  justify-content: center;  
+  justify-content: center;
+  transition: all .1s linear;
+}
+
+.link_place_header-signup:hover {
+  background: #4E7191;
+}
+
+.link_place_header-signup:active {
+  background: #32495f;
 }
