--- a/src/components/Main/main/__label/main__label.css
+++ b/src/components/Main/main/__label/main__label.css
@@ -2,13 +2,25 @@
   z-index: 1;
   grid-row-start: 2;
   grid-column-start: 5;
-  background-image: url('../../../../images/pouriers_spouts/1.svg');
   background-repeat: no-repeat;
   border-radius: 5px;
   position: relative;
   width: 100px;
   height: 75px;
   background-color: #97A7B6;
+  transition: all .15s linear;
+  cursor: pointer;
+}
+.main__label:hover {
+  filter: drop-shadow(0px 0px 5px #7a8792);
+  transform: scale(1.1);
+
+}
+
+.main__label:nth-of-type(1) {
+  grid-row-start: 2;
+  grid-column-start: 5;
+  background-image: url('../../../../images/pouriers_spouts/1.svg');
 }
 
 .main__label:nth-of-type(2) {
