--- a/src/blocks/form/__input/form__input.css
+++ b/src/blocks/form/__input/form__input.css
@@ -8,6 +8,7 @@
   border-bottom: 1px #a9a9a957 solid ;
   padding: 0 0 5px 0;
   color: #fff;
+  transition: all .1s linear;
 }
 
 .form__input::placeholder {
@@ -22,3 +23,4 @@
 .form__input:focus::placeholder {
   opacity: 0;
 }
+
