--- a/src/blocks/form/__submit-button/form__submit-button.css
+++ b/src/blocks/form/__submit-button/form__submit-button.css
@@ -8,10 +8,13 @@
   font-size: 20px;
   height: 47px;
   transition: all .15s ease-out;
-  margin-top: 43px;
 }
 
 .form__submit-button:hover {
   background-color: #FFD02D;
   filter: drop-shadow(0px 0px 5px rgba(255, 220, 21, 0.8));
+}
+
+.form__submit-button:active {
+  background-color: #eeae00;
 }
