--- a/src/components/Header/header/__menu-btn/header__menu-btn.css
+++ b/src/components/Header/header/__menu-btn/header__menu-btn.css
@@ -11,8 +11,10 @@
   background-size: contain;
   padding: 0;
   transition: all .15s linear;
+  opacity: .8;
 }
 
 .header__menu-btn:hover {
-  transform: scale(1.2)
+  transform: scale(1.2);
+  opacity: 1;
 }
