feat: create orev inventa 1280px component

--- a/src/blocks/common-block-styles.css
+++ b/src/blocks/common-block-styles.css
@@ -21,4 +21,6 @@
 @import url(./form/__submit-button/_place/form__submit-button_place_addItem.css);
 
 
+@import url(./component-title/component-title.css);
+
 /* @import url(.); */
