--- a/src/index.css
+++ b/src/index.css
@@ -20,4 +20,6 @@
 
 @import url(./components/UpdateItem/UpdateItem.css);
 
+@import url(./components/ItemList/ItemList.css);
+
 /* @import url(./); */
