--- a/src/components/Footer/footer/footer.css
+++ b/src/components/Footer/footer/footer.css
@@ -2,16 +2,17 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  /* position: fixed; */
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
   max-width: 1120px;
   margin: auto auto 0;
+  background: #000
 }
 
 .footer::before {
   content: '';
   border-top: 1px solid #989898;
-  margin-top: 100px;
+  margin-top: 50px;
 }
