feat: make checkbox add margin in slider when checked

--- a/src/components/PreviousInventa/previousInventa/__container/previousInventa__container.css
+++ b/src/components/PreviousInventa/previousInventa/__container/previousInventa__container.css
@@ -1,5 +1,6 @@
-.itemList__container {
+.previousInventa__container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-bottom: 0;
 }
