--- a/src/components/ItemList/itemList/itemList.css
+++ b/src/components/ItemList/itemList/itemList.css
@@ -1,7 +1,4 @@
 .itemList {
-  display: flex;
-  flex-direction: column;
-  padding: 0;
-  list-style-type: none;
-  margin: 60px 0 0;
+  width: 100%;
+  margin-bottom: 100px;
 }
