--- a/src/components/PreviousInventa/previousInventa/__open-btn/previousInventa__open-btn.css
+++ b/src/components/PreviousInventa/previousInventa/__open-btn/previousInventa__open-btn.css
@@ -1,7 +1,7 @@
-.itemList__open-btn {
+.previousInventa__open-btn {
   background-image: url('../../../../images/watch-btn.svg');
-  width: 30px;
-  height: 12.5px;
+  width: 45px;
+  height: 20px;
   border: none;
   outline: none;
   background-color: transparent;
@@ -11,13 +11,14 @@
   padding: 0;
   align-self: center;
   cursor: pointer;
+  margin-right: 35px;
 }
 
-.itemList__open-btn:hover {
+.previousInventa__open-btn:hover {
   transform: scale(1.3);
   filter: drop-shadow(0px 0px 5px rgba(255, 220, 21, 0.8));
 }
 
-.itemList__open-btn:active {
+.previousInventa__open-btn:active {
   opacity: .7;
 }
