--- a/src/components/BottlesData/bottlesData/__container/bottlesData__container.css
+++ b/src/components/BottlesData/bottlesData/__container/bottlesData__container.css
@@ -1,7 +1,6 @@
-.previousInventa__container {
+.bottlesData__container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   margin-bottom: 0;
-  padding-left: 5px;
 }
