--- a/src/components/BottlesData/bottlesData/__delete-btn/bottlesData__delete-btn.css
+++ b/src/components/BottlesData/bottlesData/__delete-btn/bottlesData__delete-btn.css
@@ -1,4 +1,4 @@
-.previousInventa__delete-btn {
+.bottlesData__delete-btn {
   background-image: url('../../../../images/Delete_item.svg');
   height: 30px;
   width: 30px;
@@ -11,14 +11,14 @@
   align-self: flex-end;
   padding: 0;
   cursor: pointer;
-  align-self: center;
+  align-self: flex-start;
 }
 
-.previousInventa__delete-btn:hover {
+.bottlesData__delete-btn:hover {
   transform: rotate(90deg) scale(1.3);
   filter: drop-shadow(0px 0px 5px rgba(209, 68, 68, 0.8));
 }
 
-.previousInventa__delete-btn:active {
+.bottlesData__delete-btn:active {
   opacity: .7;
 }
