--- a/src/components/PreviousInventa/previousInventa/__item/previousInventa__item.css
+++ b/src/components/PreviousInventa/previousInventa/__item/previousInventa__item.css
@@ -2,5 +2,10 @@
   color: #f3f0f0;
   font-size: 15px;
   margin: 0;
-  padding-top: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0;
+  max-width: 860px;
+  width: 100%;
 }
