feat: create smoothly sliding side menu

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,10 +2,13 @@
 @import url(./header/__link-container/header__link-container.css);
 @import url(./header/__container/header__container.css);
 @import url(./header/__menu-btn/header__menu-btn.css);
+@import url(./header/__navigation-title/header__navigation-title.css);
+@import url(./header/__navigation-link/header__navigation-link.css);
+@import url(./header/__navigation-menu/header__navigation-menu.css);
+@import url(./header/__navigation-close-btn/header__navigation-close-btn.css);
+@import url(./header/__navigation-link-container/header__navigation-link-container.css);
+@import url(./header/__navigation-menu/_closed/header__navigation-menu_closed.css);
+@import url(./header/__navigation-container/header__navigation-container.css);
+@import url(./header/__navigation-container/_closed/header__navigation-container_closed.css);
 
-/* @import url(.); */
-/* @import url(.); */
-/* @import url(.); */
-/* @import url(.); */
-/* @import url(.); */
 /* @import url(.); */
