--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,8 @@
 
 @import url(./blocks/common-block-styles.css);
 
+@import url(./components/Inventa/Inventa.css);
+
 @import url(./components/ItemList/ItemList.css);
 
 @import url(./components/UpdateItem/UpdateItem.css);
@@ -29,7 +31,5 @@
 @import url(./components/PreviousInventa/PreviousInventa.css);
 
 
-
-/* @import url(./components); */
 
 /* @import url(./components); */
