--- a/src/components/Inventa/inventa/__drink-list/inventa__drink-list.css
+++ b/src/components/Inventa/inventa/__drink-list/inventa__drink-list.css
@@ -3,7 +3,7 @@
   list-style-type: none;
   padding: 0 13px;
   max-height: 0px;
-  transition: all .3s linear;
+  transition: all .3s ease;
   margin-top: 20px;
   background-color: #6a6a6a9a;
   border-radius: 10px;
