--- a/src/components/Inventa/inventa/__drink-item/inventa__drink-item.css
+++ b/src/components/Inventa/inventa/__drink-item/inventa__drink-item.css
@@ -1,15 +1,16 @@
 .inventa__drink-item {
-  color: #AFADAD;
+  color: #fff;
   line-height: 30px;
   font-size: 18px;
   display: flex;
+  padding: 15px 20px 0px;
   flex-direction: column;
 }
 
 .inventa__drink-item::after {
   content: '';
-  border: 1px solid #afadad80;
-  margin: 15px 0;
+  border-bottom: 1px solid #afadad80;
+  padding-bottom: 15px;
 }
 
 .inventa__drink-item:last-of-type:after {
@@ -19,4 +20,8 @@
 
 .inventa__drink-item:first-of-type {
   margin-top: 20px;
+}
+
+.inventa__drink-item:nth-child(2n) {
+  background-color: #6a6a6a60;
 }
