--- a/src/components/Inventa/inventa/__drink-list/inventa__drink-list.css
+++ b/src/components/Inventa/inventa/__drink-list/inventa__drink-list.css
@@ -1,7 +1,7 @@
 .inventa__drink-list {
   overflow: hidden;
   list-style-type: none;
-  padding: 0 13px;
+  padding: 0;
   max-height: 0px;
   transition: all .3s ease;
   margin-top: 20px;
