--- a/src/index.css
+++ b/src/index.css
@@ -31,5 +31,6 @@
 @import url(./components/PreviousInventa/PreviousInventa.css);
 
 
+@import url(./components/AddManually/AddManually.css);
 
 /* @import url(./components); */
