fix: fix cmponents to make them useble by protected route

--- a/src/components/App/app/page.css
+++ b/src/components/App/app/page.css
@@ -8,4 +8,6 @@
   text-decoration: none;
   margin: auto;
   font-family: 'Inter', 'Roboto', 'sans-serif';
+  justify-content: space-between;
+  position: relative;
 }
