--- a/src/blocks/form/__input/_place/form__input_place_addManually.css
+++ b/src/blocks/form/__input/_place/form__input_place_addManually.css
@@ -1,3 +1,18 @@
 .form__input_place_addManually {
-  
+  background: #C6C6C6;
+  border-radius: 6px;
+  color: black;
+  padding: 0 10px;
+  max-height: 60px;
+  height: 100%;
+  font-size: 20px;
+  width: 100%;
+  box-sizing: border-box;
+
+
+}
+
+.form__input_place_addManually::placeholder {
+  font-size: 20px;
+  overflow: visible;
 }
