--- a/src/blocks/form/_place/form_place_bottle-form.css
+++ b/src/blocks/form/_place/form_place_bottle-form.css
@@ -1,4 +1,4 @@
-.form_place_addItem {
+.form_place_bottle-form {
   display: grid;
   grid-template-columns: repeat(2, 344px) ;
   grid-template-rows: repeat(5, 60px) ;
