--- a/src/components/AddManually/addManually/addManually.css
+++ b/src/components/AddManually/addManually/addManually.css
@@ -2,7 +2,22 @@
   display: flex;
   flex-direction: row;
   width: auto;
-  width: fit-content;
   column-gap: 20px;
-  margin: auto 0;
+  height: 100%;
+  justify-content: space-between;
+}
+
+.addManually:before {
+  content: '';
+  background-image: url(../../../images/addManualluPic.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 600px;
+  width: 600px;
+  position: absolute;
+  bottom: -178px;
+  top: auto;
+  left: 45%;
+  right: 0;
+  opacity: .5;
 }
