feat: protect all routes whicha are closed 4 unlogged users

--- a/src/components/Footer/footer/footer.css
+++ b/src/components/Footer/footer/footer.css
@@ -1,9 +1,7 @@
 .footer {
   display: flex;
   flex-direction: column;
-}
-
-.footer::before {
-  content: '';
-  border-top: 1px solid #989898;
+  height: 90px;
+  justify-content: center;
+  border-top: 1px solid #98989847;
 }
