--- a/src/components/AddManually/addManually/addManually.css
+++ b/src/components/AddManually/addManually/addManually.css
@@ -12,10 +12,11 @@
   background-image: url(../../../images/addManualluPic.svg);
   background-repeat: no-repeat;
   background-size: contain;
-  height: 600px;
-  width: 600px;
+  max-height: 355px;
+  height: 100%;
+  max-width: 600px;
   position: absolute;
-  bottom: -178px;
+  bottom: 91px;
   top: auto;
   left: 45%;
   right: 0;
