--- a/src/components/App/app/page.css
+++ b/src/components/App/app/page.css
@@ -9,5 +9,5 @@
   margin: auto;
   font-family: 'Inter', 'Roboto', 'sans-serif';
   justify-content: space-between;
-  position: relative;
+  /* position: relative; */
 }
