--- a/src/components/Footer/footer/__copyrights/footer__copyrights.css
+++ b/src/components/Footer/footer/__copyrights/footer__copyrights.css
@@ -1,7 +1,7 @@
 .footer__copyrights {
   color: #A9A9A9;
-  font-size: 10px;
+  font-size: 15px;
   font-style: normal;
   font-weight: 400;
-  margin: 18px auto 18px 0;
+  margin: 0;
 }
