--- a/src/components/Header/header/__navigation-menu/header__navigation-menu.css
+++ b/src/components/Header/header/__navigation-menu/header__navigation-menu.css
@@ -8,10 +8,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  transition: all .6s ease-out;
+  transition: all .6s ease-in-out;
   z-index: 1;
   overflow: hidden;
 }
-
-
-
