--- a/src/components/Login/login/login.css
+++ b/src/components/Login/login/login.css
@@ -1,6 +1,6 @@
 .login {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   justify-content: space-around;
 }
