--- a/src/components/Registration/registration/registration.css
+++ b/src/components/Registration/registration/registration.css
@@ -1,6 +1,6 @@
 .registration {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   justify-content: space-around;
 }
