feat: add some links between components

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,6 @@
 @import url(./app/page.css);
+@import url(./app/__message/page__message.css);
+@import url(./app/__entrance-message/page__entrance-message.css);
 
-/* @import url(.); */
-/* @import url(.); */
 /* @import url(.); */
 /* @import url(.); */
