--- a/src/components/App/app/page.css
+++ b/src/components/App/app/page.css
@@ -11,3 +11,16 @@
   justify-content: space-between;
   /* position: relative; */
 }
+
+.page::before {
+  content: '';
+  background-image: url(../../../images/bar.jpeg);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity:  .04;
+  box-shadow: 0 30px 100px 200px #000 inset;
+  z-index: -1;
+}
