--- a/src/components/Header/header/__link-container/header__link-container.css
+++ b/src/components/Header/header/__link-container/header__link-container.css
@@ -1,6 +1,7 @@
 .header__link-container {
   display: flex;
   flex-direction: row;
-  margin: 20px 0 auto;
+  /* margin: 20px 0 auto; */
+  align-items: center;
   gap: 12px;
 }
