feat: reate wrongPath component

--- a/src/components/BottlesData/bottlesData/__btn-container/bottlesData__btn-container.css
+++ b/src/components/BottlesData/bottlesData/__btn-container/bottlesData__btn-container.css
@@ -1,4 +1,10 @@
 .bottlesData__btn-container {
   display: flex;
   flex-direction: row;
+  width: 100%;
+  justify-content: end;
+}
+
+.bottlesData__btn-container > .bottlesData__item-data {
+  margin-right: auto;
 }
