--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,8 @@
 
 @import url(./components/PreviousInventa/PreviousInventa.css);
 
-
 @import url(./components/AddManually/AddManually.css);
+
+@import url(./components/WrongPath/WrongPath.css);
 
 /* @import url(./components); */
