--- a/src/components/BottlesData/bottlesData/__item-data/bottlesData__item-data.css
+++ b/src/components/BottlesData/bottlesData/__item-data/bottlesData__item-data.css
@@ -1,14 +1,11 @@
 .bottlesData__item-data {
-  position: absolute;
-  height: 0;
-  transition: all .2s ease-in-out;
-  top: 30px;
-  left: 0;
-  right: 0;
-  bottom: 30px;
   list-style-type: none;
+  overflow: hidden;
+  transition: all .3s ease;
+  max-height: 0;
+  opacity: 1;
   padding: 0;
-  row-gap: 0;
-  opacity: 0;
-  line-height: 0;
+  display: flex;
+  flex-direction: column;
+  line-height: 1.4;
 }
