--- a/src/components/BottlesData/bottlesData/__item/bottlesData__item.css
+++ b/src/components/BottlesData/bottlesData/__item/bottlesData__item.css
@@ -1,6 +1,7 @@
 .bottlesData__item {
-  color: #f3f0f0;
+  color: #d7a700;
   font-size: 15px;
   margin: 0;
   padding-top: 5px;
+  position: absolute;
 }
