--- a/src/components/BottlesData/bottlesData/__open-checkbox/bottlesData__open-checkbox.css
+++ b/src/components/BottlesData/bottlesData/__open-checkbox/bottlesData__open-checkbox.css
@@ -1,24 +1,19 @@
+
+.bottlesData__open-checkbox:checked ~ .bottlesData__item-data {
+  max-height: 250px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+}
+
+.bottlesData__open-checkbox:checked  .bottlesData__open-checkbox-overlay {
+  margin-bottom: 260px;
+}
+
 .bottlesData__open-checkbox {
   position: absolute;
   width: 1px;
   height: 1px;
   overflow: hidden;
   clip: rect(0 0 0 0);
-}
-
-.bottlesData__open-checkbox:checked ~ .bottlesData__item-data {
-  display: flex;
-  flex-direction: column;
-  row-gap: 12px;
-  opacity: 1;
-  padding: 0;
-  left: 0;
-  right: 0;
-  top: 35px;
-  bottom: 30px;
-  line-height: 1;
-}
-
-.bottlesData__open-checkbox:checked ~ .bottlesData__open-checkbox-overlay {
-  margin-bottom: 260px;
 }
