--- a/src/components/PreviousInventa/previousInventa/__open-checkbox/previousInventa__open-checkbox.css
+++ b/src/components/PreviousInventa/previousInventa/__open-checkbox/previousInventa__open-checkbox.css
@@ -6,7 +6,7 @@
   clip: rect(0 0 0 0);
 }
 
-.previousInventa__open-checkbox:checked ~ .previousInventa__item-data {
+.previousInventa__open-checkbox:checked > .previousInventa__item-data {
   display: flex;
   flex-direction: column;
   row-gap: 12px;
