--- a/src/blocks/form/__checkbox-button/_span/form__checkbox-button_span.css
+++ b/src/blocks/form/__checkbox-button/_span/form__checkbox-button_span.css
@@ -1,7 +1,7 @@
 .form__checkbox-button_span {
   margin-left: 15px;
   line-height: 15px;
-  color:  #15b8eb;;
+  color:  #00ff67c4;
   font-size: 30px;
   position: absolute;
   transition: all .2s ease;
